package pt.ipp.isep.dei.domain;

public enum ComplaintStatus {
    SUBMITTED,
    UNDER_REVIEW,
    CLOSED
}
