@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

class Citizen {
  name
  taxId
  email
}

class PoliticalAgent {
}

class Role {
  designation
}

class PoliticalMandate {
  startDate
  endDate
}

class Complaint {
  incidentDate
  submissionDate
  description
}

enum ComplaintStatus {
  SUBMITTED
  UNDER_REVIEW
  CLOSED
}

PoliticalAgent "1" -- "0..*" PoliticalMandate : holds >
PoliticalMandate "*" -- "1" Role : associated with >

Citizen "1" -- "0..*" Complaint : submits >
Complaint "*" -- "1" PoliticalAgent : reports on >
Complaint "*" -- "1" PoliticalMandate : in context of >
Complaint --> "1" ComplaintStatus

@enduml